// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": true,
  "exchangePrices": Object {},
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": false,
  "exchangePrices": Object {},
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer status 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;
